FIX :: Scheduling cron 0 0 * * * * -> 0 4 * * * *